Fix hidden dropdown menus on mobiles
Currently drowdowns are hidden. This way they are shown. Save because only applied if the menu is actually open, in that stage there is no need for `overflow: hidden;`

--- a/less/component-animations.less
+++ b/less/component-animations.less
@@ -29,4 +29,5 @@
 }
 .collapse.in {
   height: auto;
+  overflow: visible; // Fix hidden (navbar) dropdown menus on mobiles
 }
